pn532_example/build/log/idf_py_stdout_output_3532
[1/9] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Global\pn532_example\build\bootloader\esp-idf\esptool_py && C:\Users\romanchekk\.espressif\python_env\idf5.2_py3.11_env\Scripts\python.exe C:/Users/romanchekk/esp/v5.2/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/Global/pn532_example/build/bootloader/bootloader.bin"
Bootloader binary size 0x5250 bytes. 0x2db0 bytes (36%) free.
[2/7] Building CXX object esp-idf/core/CMakeFiles/__idf_core.dir/Src/main.cpp.obj
FAILED: esp-idf/core/CMakeFiles/__idf_core.dir/Src/main.cpp.obj 
ccache C:\Users\romanchekk\.espressif\tools\xtensa-esp-elf\esp-13.2.0_20230928\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"v5.2.1-58-gdeacd79736-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/Global/pn532_example/build/config -ID:/Global/pn532_example/core -ID:/Global/pn532_example/core/Inc -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/newlib/platform_include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/config/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/config/include/freertos -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/config/xtensa/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/freertos/esp_additions/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_hw_support/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_hw_support/include/soc -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_hw_support/include/soc/esp32s3 -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_hw_support/port/esp32s3/. -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/heap/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/log/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/soc/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/soc/esp32s3 -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/soc/esp32s3/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/hal/platform_port/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/hal/esp32s3/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/hal/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_rom/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_rom/include/esp32s3 -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_rom/esp32s3 -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_common/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_system/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_system/port/soc -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_system/port/include/private -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/xtensa/esp32s3/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/xtensa/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/xtensa/deprecated_include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/include/apps -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/include/apps/sntp -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/lwip/src/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/port/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/port/freertos/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include/arch -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/lwip/port/esp32xx/include/sys -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_event/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/deprecated -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/analog_comparator/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/dac/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/gpio/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/gptimer/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/i2c/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/i2s/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/ledc/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/mcpwm/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/parlio/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/pcnt/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/rmt/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/sdio_slave/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/sdmmc/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/sigma_delta/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/spi/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/temperature_sensor/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/touch_sensor/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/twai/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/uart/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/usb_serial_jtag/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/driver/touch_sensor/esp32s3/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_pm/include -IC:/Users/romanchekk/esp/v5.2/esp-idf/components/esp_ringbuf/include -mlongcalls  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/Global/pn532_example=. -fmacro-prefix-map=C:/Users/romanchekk/esp/v5.2/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -MD -MT esp-idf/core/CMakeFiles/__idf_core.dir/Src/main.cpp.obj -MF esp-idf\core\CMakeFiles\__idf_core.dir\Src\main.cpp.obj.d -o esp-idf/core/CMakeFiles/__idf_core.dir/Src/main.cpp.obj -c D:/Global/pn532_example/core/Src/main.cpp
D:/Global/pn532_example/core/Src/main.cpp: In function 'void pn532_example(void*)':
D:/Global/pn532_example/core/Src/main.cpp:174:7: error: 'else' without a previous 'if'
  174 |     } else {
      |       ^~~~
D:/Global/pn532_example/core/Src/main.cpp: At global scope:
D:/Global/pn532_example/core/Src/main.cpp:181:1: error: expected declaration before '}' token
  181 | }
      | ^
ninja: build stopped: subcommand failed.
